--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Century Bakery</title>
+  <title>OnFarmView - Farm Monitoring Tools</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -51,7 +51,7 @@
     </div>
     <a id="nav-link" data-scroll data-easing="easeInQuint" href="#beranda">Home</a>
     <a id="nav-link1" data-scroll data-easing="easeInQuint" href="#tentang">About Us</a>
-    <a id="nav-link2" data-scroll data-easing="easeInQuint" href="#menu">Menu</a>
+    <a id="nav-link2" data-scroll data-easing="easeInQuint" href="#menu">Services</a>
     <a id="nav-link3" data-scroll data-easing="easeInQuint" href="#review">Review</a>
     <a id="nav-link4" data-scroll data-easing="easeInQuint" href="#partnership">Partnership</a>
     <a id="nav-link5" data-scroll data-easing="easeInQuint" href="#lokasi">Location</a>
@@ -69,11 +69,8 @@
     <div class="area-tentang" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
       <h1 class="judul">About Us</h1>
       <p>
-        Century Bakery was Founded in 1920 in Indonesia with The Motto of the Best Service and Quality, we always
-        choose
-        the Best Ingredients. We make dishes with local Ingredients, We make them by Hand and with Love. 23 Outlet
-        have
-        been opened in Indonesia with 763 employes. Many Companies and People have trusted us.
+        Onfarmview is a pioneering startup integrating satellite imagery, AI, and UAV imagery to provide practical agricultural insights, particularly for rice and fruit farming in Vietnam. Our mission is to optimize yields and enhance sustainability through actionable insights.
+        
       </p>
       <p>. . .</p>
     </div>
