--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <div class="nav">
     <a data-scroll data-easing="easeInQuint" href="#beranda" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="50">Home</a>
-    <a data-scroll data-easing="easeInQuint" href="#tentang" data-aos="fade-down" data-aos-duration="400"
+    <a data-scroll data-easing="easeInQuint" href="#about" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="100">About Us</a>
-    <a data-scroll data-easing="easeInQuint" href="#menu" data-aos="fade-down" data-aos-duration="400"
-      data-aos-delay="150">Menu</a>
+    <a data-scroll data-easing="easeInQuint" href="#services" data-aos="fade-down" data-aos-duration="400"
+      data-aos-delay="150">Services</a>
     <img src="assets/img/logo.png" alt="" data-aos="fade-down" data-aos-duration="1500">
     <a data-scroll data-easing="easeInQuint" href="#review" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="150">Review</a>
@@ -50,8 +50,8 @@
       <img src="assets/img/close.png" alt="" id="btn-menu">
     </div>
     <a id="nav-link" data-scroll data-easing="easeInQuint" href="#beranda">Home</a>
-    <a id="nav-link1" data-scroll data-easing="easeInQuint" href="#tentang">About Us</a>
-    <a id="nav-link2" data-scroll data-easing="easeInQuint" href="#menu">Services</a>
+    <a id="nav-link1" data-scroll data-easing="easeInQuint" href="#about">About Us</a>
+    <a id="nav-link2" data-scroll data-easing="easeInQuint" href="#services">Services</a>
     <a id="nav-link3" data-scroll data-easing="easeInQuint" href="#review">Review</a>
     <a id="nav-link4" data-scroll data-easing="easeInQuint" href="#partnership">Partnership</a>
     <a id="nav-link5" data-scroll data-easing="easeInQuint" href="#lokasi">Location</a>
@@ -130,7 +130,7 @@
         <div class="area-menu">
           <h1 class="judul">Coockies</h1>
           <p>Crispy texture because it is baked at high temperature plus chocochips to make the taste sweet.</p>
-          <h1 class="harga">IDR 30.000</h1>
+          <h1 class="harga"> 30.000</h1>
         </div>
       </div>
       <div class="box-menu carousel-cell">
@@ -140,7 +140,7 @@
           <p>Crispy texture on the outside and soft on the inside, filled with butter which makes it taste
             delicious,
             perfect for breakfast</p>
-          <h1 class="harga">IDR 20.000</h1>
+          <h1 class="harga"> 20.000</h1>
         </div>
       </div>
       <div class="box-menu carousel-cell">
@@ -150,7 +150,7 @@
           <p>bread that is elongated in shape and has a hard skin texture but is soft inside, elongated like a
             stick,
             usually served sliced and spread with butter and garlic.</p>
-          <h1 class="harga">IDR 40.000</h1>
+          <h1 class="harga"> 40.000</h1>
         </div>
       </div>
       <div class="box-menu carousel-cell">
@@ -160,7 +160,7 @@
           <p> The taste of pretzels is generally savory or slightly sweet. The texture of the pretzels is usually
             soft
             and tender. Generally, pretzels are served with a sprinkling of coarse salt.</p>
-          <h1 class="harga">IDR 25.000</h1>
+          <h1 class="harga"> .000</h1>
         </div>
       </div>
       <div class="box-menu carousel-cell">
@@ -170,7 +170,7 @@
           <p>This easy-to-digest bread goes well with butter and garlic, the texture is dense and fibrous and the
             taste
             is slightly sour.</p>
-          <h1 class="harga">IDR 50.000</h1>
+          <h1 class="harga"> 50.000</h1>
         </div>
       </div>
       <div class="box-menu carousel-cell">
@@ -178,7 +178,7 @@
         <div class="area-menu">
           <h1 class="judul">Donuts</h1>
           <p>Soft Bread Texture Covered with sweet Chocolate and also sprinkled with nuts and has other flavors.</p>
-          <h1 class="harga">IDR 20.0000</h1>
+          <h1 class="harga"> 20.0000</h1>
         </div>
       </div>
       <div class="box-menu carousel-cell">
@@ -188,7 +188,7 @@
           <p>The Texture is soft with vanilla cream filling on top and also sprinkled with cocoa powder and choco
             chips.
           </p>
-          <h1 class="harga">IDR 20.000</h1>
+          <h1 class="harga"> 20.000</h1>
         </div>
       </div>
     </div>
