--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <!-- ======= Menu Start ======= -->
   <div class="menu container" id="menu">
-    <h1 class="judul" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">Menu</h1>
+    <h1 class="judul" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">Services</h1>
     <div class="carousel">
       <div class="box-menu carousel-cell">
         <img src="assets/img/coockies.jpg" alt="">
@@ -317,8 +317,8 @@
     <div class="footer-4" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
       <h1>Link</h1>
       <a data-scroll data-easing="easeInQuint" href="#beranda">Home</a>
-      <a data-scroll data-easing="easeInQuint" href="#tentang">About Us</a>
-      <a data-scroll data-easing="easeInQuint" href="#menu">Menu</a>
+      <a data-scroll data-easing="easeInQuint" href="#about">About Us</a>
+      <a data-scroll data-easing="easeInQuint" href="#services">Services</a>
       <a data-scroll data-easing="easeInQuint" href="#review">Review</a>
       <a data-scroll data-easing="easeInQuint" href="#partnership">Partnership</a>
       <a data-scroll data-easing="easeInQuint" href="#lokasi">Location</a>
