--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- ======= Home End ======= -->
 
   <!-- ======= About Start ======= -->
-  <div class="tentang container" id="tentang">
+  <div class="tentang container" id="about">
     <img src="assets/img/paperbag.png" alt="" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="200">
     <div class="area-tentang" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
       <h1 class="judul">About Us</h1>
@@ -122,7 +122,7 @@
   <!-- ======= visi End ======= -->
 
   <!-- ======= Menu Start ======= -->
-  <div class="menu container" id="menu">
+  <div class="menu container" id="services">
     <h1 class="judul" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">Services</h1>
     <div class="carousel">
       <div class="box-menu carousel-cell">
