--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <!-- ======= Header ======= -->
   <div class="nav">
-    <a data-scroll data-easing="easeInQuint" href="#beranda" data-aos="fade-down" data-aos-duration="400"
+    <a data-scroll data-easing="easeInQuint" href="#home" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="50">Home</a>
     <a data-scroll data-easing="easeInQuint" href="#about" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="100">About Us</a>
@@ -49,7 +49,7 @@
     <div class="btn-menu">
       <img src="assets/img/close.png" alt="" id="btn-menu">
     </div>
-    <a id="nav-link" data-scroll data-easing="easeInQuint" href="#beranda">Home</a>
+    <a id="nav-link" data-scroll data-easing="easeInQuint" href="#home">Home</a>
     <a id="nav-link1" data-scroll data-easing="easeInQuint" href="#about">About Us</a>
     <a id="nav-link2" data-scroll data-easing="easeInQuint" href="#services">Services</a>
     <a id="nav-link3" data-scroll data-easing="easeInQuint" href="#review">Review</a>
@@ -58,7 +58,7 @@
   </div> <!-- End Header -->
 
   <!-- ======= Home Start ======= -->
-  <div class="beranda" id="beranda">
+  <div class="beranda" id="home">
     <span id="typed" data-aos="fade-up" data-aos-duration="500"></span>
   </div>
   <!-- ======= Home End ======= -->
@@ -316,7 +316,7 @@
 
     <div class="footer-4" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
       <h1>Link</h1>
-      <a data-scroll data-easing="easeInQuint" href="#beranda">Home</a>
+      <a data-scroll data-easing="easeInQuint" href="#home">Home</a>
       <a data-scroll data-easing="easeInQuint" href="#about">About Us</a>
       <a data-scroll data-easing="easeInQuint" href="#services">Services</a>
       <a data-scroll data-easing="easeInQuint" href="#review">Review</a>
