--- a/index.html
+++ b/index.html
@@ -85,22 +85,18 @@
         <div class="box-visi" data-aos="fade-up" data-aos-duration="500">
           <img src="assets/img/pelayanan.png" alt="">
           <h1>Best Service</h1>
-          <p>we choose employees who are competent in their fields, we train waiters before working in our company.
+          <p>We ensure our services are top-notch by continuously training our team and utilizing the latest technologies.
           </p>
         </div>
         <div class="box-visi" data-aos="fade-up" data-aos-duration="500">
           <img src="assets/img/bahan.png" alt="">
-          <h1>Fresh Ingredients</h1>
-          <p>we choose fresh local ingredients, we have partnerships with several grocery companies. We process
-            fresh
-            ingredients in the kitchen every day.</p>
+          <h1>Fresh Insights</h1>
+          <p>We provide real-time, fresh insights to help farmers make informed decisions, improving productivity and sustainability.</p>
         </div>
         <div class="box-visi" data-aos="fade-up" data-aos-duration="500">
           <img src="assets/img/suasana.png" alt="">
           <h1>Good Atmosphere</h1>
-          <p>we chose a strategic place. The design of the place is adjusted so that visitors feel at home entering
-            our
-            shop, chatting with friends, friends and family is very comfortable here.</p>
+          <p>We foster a collaborative and innovative atmosphere, ensuring our clients feel supported and engaged.</p>
         </div>
       </div>
       <div class="main-carousel">
@@ -128,8 +124,8 @@
       <div class="box-menu carousel-cell">
         <img src="assets/img/coockies.jpg" alt="">
         <div class="area-menu">
-          <h1 class="judul">Coockies</h1>
-          <p>Crispy texture because it is baked at high temperature plus chocochips to make the taste sweet.</p>
+          <h1 class="judul">Satellite Imagery</h1>
+          <p>Providing high-resolution satellite imagery to monitor crop health and growth stages.</p>
           <h1 class="harga"> 30.000</h1>
         </div>
       </div>
