--- a/index.html
+++ b/index.html
@@ -126,30 +126,26 @@
         <div class="area-menu">
           <h1 class="judul">Satellite Imagery</h1>
           <p>Providing high-resolution satellite imagery to monitor crop health and growth stages.</p>
-          <h1 class="harga"> 30.000</h1>
+          <h1 class="harga"> $0</h1>
         </div>
       </div>
       <div class="box-menu carousel-cell">
         <img src="assets/img/croissant.jpg" alt="">
         <div class="area-menu">
-          <h1 class="judul">Croissant</h1>
-          <p>Crispy texture on the outside and soft on the inside, filled with butter which makes it taste
-            delicious,
-            perfect for breakfast</p>
-          <h1 class="harga"> 20.000</h1>
+          <h1 class="judul">AI Analytics</h1>
+          <p>Utilizing AI algorithms to analyze data and provide actionable insights for optimizing agricultural practices.</p>
+          <h1 class="harga"> $0</h1>
         </div>
       </div>
       <div class="box-menu carousel-cell">
         <img src="assets/img/baguette.jpg" alt="">
         <div class="area-menu">
-          <h1 class="judul">Baguette</h1>
-          <p>bread that is elongated in shape and has a hard skin texture but is soft inside, elongated like a
-            stick,
-            usually served sliced and spread with butter and garlic.</p>
-          <h1 class="harga"> 40.000</h1>
+          <h1 class="judul">UAV Imagery</h1>
+          <p>Using UAVs to capture detailed images and data from the fields, enhancing precision agriculture.</p>
+          <h1 class="harga"> $0</h1>
         </div>
       </div>
-      <div class="box-menu carousel-cell">
+      <!-- <div class="box-menu carousel-cell">
         <img src="assets/img/pretzels.jpg" alt="">
         <div class="area-menu">
           <h1 class="judul">Pretzel</h1>
@@ -185,7 +181,7 @@
             chips.
           </p>
           <h1 class="harga"> 20.000</h1>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -199,27 +195,20 @@
       <div class="box-review" data-aos="fade-up" data-aos-duration="1500">
         <img src="assets/img/profile.png" alt="">
         <h1 data-aos="zoom-in-up" data-aos-duration="500" data-aos-delay="500">Crish Ederson</h1>
-        <p data-aos="fade-down" data-aos-duration="500" data-aos-delay="800">I Buy Croissants And Baguette here
-          every
-          morning. The Texture of the Croissants is soft inside and Crispy on the outside, the bread here is always
-          delecius.</p>
+        <p data-aos="fade-down" data-aos-duration="500" data-aos-delay="800">Onfarmview's insights have revolutionized our farming practices, resulting in higher yields and better crop health.</p>
         <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="800">. . .</p>
       </div>
       <div class="box-review" data-aos="fade-up" data-aos-duration="1500">
         <img src="assets/img/profile1.png" alt="">
         <h1 data-aos="zoom-in-up" data-aos-duration="500" data-aos-delay="500">Natalie Hadel</h1>
-        <p data-aos="fade-down" data-aos-duration="500" data-aos-delay="800">When I Was Little, My Mother always
-          bought
-          me Donuts here after school. The Taste has never changed from the first time I Bought it, Their Service is
-          Very Friendly</p>
+        <p data-aos="fade-down" data-aos-duration="500" data-aos-delay="800">The AI analytics provided by Onfarmview have given us the competitive edge we needed in precision agriculture.</p>
         <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="800">. . .</p>
       </div>
 
       <div class="box-review" data-aos="fade-up" data-aos-duration="1500">
         <img src="assets/img/profile2.png" alt="">
         <h1 data-aos="zoom-in-up" data-aos-duration="500" data-aos-delay="500">David Handrick</h1>
-        <p data-aos="fade-down" data-aos-duration="500" data-aos-delay="800">I Like Hanging out here with my friends
-          every week, the bread here is affordable, The atmosphere here very comfortable to chat with Friends.</p>
+        <p data-aos="fade-down" data-aos-duration="500" data-aos-delay="800">Onfarmview's UAV imagery has transformed our field monitoring processes, making them more efficient and accurate.</p>
         <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="800"> . . .</p>
       </div>
 
