--- a/index.html
+++ b/index.html
@@ -243,16 +243,16 @@
   <!-- ======= Partnership End ======= -->
 
   <!-- ======= Outlet Start ======= -->
-  <div class="lokasi container" id="lokasi">
+  <!-- <div class="lokasi container" id="lokasi">
     <h1 class="judul" data-aos="fade-up" data-aos-duration="500">Outlet</h1>
     <iframe id="map" data-aos="fade-up" data-aos-duration="500" data-aos-delay="800"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.1521988417944!2d107.18197431477056!3d-6.502408995296435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x306f0894fd4695c8!2zNsKwMzAnMDguNyJTIDEwN8KwMTEnMDMuMCJF!5e0!3m2!1sen!2sid!4v1668349240972!5m2!1sen!2sid"
       frameborder="0" allowfullscreen></iframe>"
-  </div>
+  </div> -->
   <!-- ======= Outlet End ======= -->
 
   <!-- ======= Galery Start ======= -->
-  <div class="gallery container">
+  <!-- <div class="gallery container">
     <h1 class="judul">Galery</h1>
     <div class="area-gallery" id="content">
       <img src="assets/img/toko.jpg" alt="">
@@ -262,7 +262,7 @@
       <img src="assets/img/gallery1.jpg" alt="">
       <img src="assets/img/gallery2.jpg" alt="">
     </div>
-  </div>
+  </div> -->
   <!-- ======= Galery End ======= -->
 
   <!-- ======= Footer Start ======= -->
@@ -272,7 +272,7 @@
         <img src="assets/img/logo.png" alt="">
         <h1>Century Bakery</h1>
       </div>
-      <p data-aos="fade-up" data-aos-duration="800">Provide The Best Service <br> With high-resolution images.</p>
+      <p data-aos="fade-up" data-aos-duration="800">Provide The Best Services <br> With high-resolution images.</p>
       <div class="sosial-media">
         <a href="">
           <img src="assets/img/facebook.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="200">
