--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   <!-- ======= Review End ======= -->
 
   <!-- ======= Partnership Start ======= -->
-  <div class="partner container" id="partnership">
+  <!-- <div class="partner container" id="partnership">
     <h1 class="judul" data-aos="zoom-in-up" data-aos-duration="500">Partnership</h1>
     <div class="main-carousel">
       <div class="carousel-cell">
@@ -239,7 +239,7 @@
         <img src="assets/img/hard-rock.png" alt="">
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- ======= Partnership End ======= -->
 
   <!-- ======= Outlet Start ======= -->
