--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- ======= About End ======= -->
 
   <!-- ======= visi Start ======= -->
-  <div class="visi container">
+  <!-- <div class="visi container">
     <h1 class="judul">Vision & Mission</h1>
     <div class="area-visi">
       <div class="visi-kiri">
@@ -114,7 +114,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- ======= visi End ======= -->
 
   <!-- ======= Menu Start ======= -->
@@ -270,14 +270,14 @@
     <div class="footer-1">
       <div class="footer-logo" data-aos="fade-down" data-aos-duration="800">
         <img src="assets/img/logo.png" alt="">
-        <h1>Century Bakery</h1>
+        <h1>OnFarmView</h1>
       </div>
       <p data-aos="fade-up" data-aos-duration="800">Provide The Best Services <br> With high-resolution images.</p>
       <div class="sosial-media">
         <a href="">
           <img src="assets/img/facebook.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="200">
         </a>
-        <a href="https://www.instagram.com/msn.production/">
+        <a href="https://www.instagram.com/OnFarmView/">
           <img src="assets/img/instagram.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="250">
         </a>
         <a href="">
@@ -310,7 +310,7 @@
     </div>
   </div>
   <footer>
-    <h1>&copy; Copyright 2024, <a href=""> On-Farm View.</a> All Rights Reserved</h1>
+    <h1>&copy; Copyright 2024, <a href=""> OnFarmView.</a> All Rights Reserved</h1>
   </footer>
   <!-- ======= Footer End ======= -->
 
